# Koola

./: .gitignore  README.md  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/debug/: output-metadata.json
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/cn/peyriat/koola/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: native_init  xposed_init
app/src/main/cpp/: CMakeLists.txt  Features.cpp  Features.h  GameEvents.cpp  GameEvents.h  koola.cpp  koola.h
app/src/main/cpp/shadowhook/: sh_enter.c  sh_exit.c  sh_exit.h  sh_hub.c  sh_jni.c  sh_linker.c  sh_linker.h  sh_recorder.c  sh_safe.c  sh_switch.c  sh_switch.h  sh_task.c  sh_task.h  shadowhook.c
app/src/main/cpp/shadowhook/arch/arm64/: sh_a64.c  sh_inst.c  sh_inst.h
app/src/main/cpp/shadowhook/common/: sh_errno.c  sh_trampo.c  sh_trampo.h  sh_util.c
app/src/main/java/cn/peyriat/koola/: GameStatus.kt  HookEntry.kt  JavaHook.kt  MainActivity.kt  MainHook.kt  NativeHook.kt  ShadowHook.java
app/src/main/java/cn/peyriat/koola/ui/: MainActivity.kt  NavigationItem.kt
app/src/main/java/cn/peyriat/koola/util/: FileUtils.kt  GameUtils.kt  LogUtils.kt
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/peyriat/koola/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
